--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -24,7 +24,7 @@
     height: 100px;
     position: relative;
     transform-style: preserve-3d;
-    transform: rotateX(20deg) rotateY(20deg);
+    transform: rotateX(10deg) rotateY(10deg);
     transition: transform 2s;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 
@@ -162,10 +162,10 @@ text {
     <div class="header">
       <h1>WAR JS</h1>
     </div>
-    <div class="preloader" id="preloader">
+   <!-- <div class="preloader" id="preloader">
       <div class="loader"></div>
       <p>Carregando...</p>
-    </div>
+    </div>-->
     <div class="content";>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral esquerda -->
