--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -162,10 +162,10 @@ text {
     <div class="header">
       <h1>WAR JS</h1>
     </div>
-   <!-- <div class="preloader" id="preloader">
+  <div class="preloader" id="preloader">
       <div class="loader"></div>
       <p>Carregando...</p>
-    </div>-->
+    </div>
     <div class="content";>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral esquerda -->
