--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -22,12 +22,10 @@
 #dice {
     width: 100px;
     height: 100px;
-    position: relative;
+    position: absolute;
     transform-style: preserve-3d;
-    transform: rotateX(10deg) rotateY(10deg);
     transition: transform 2s;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-
 }
 
 .face {
@@ -162,10 +160,10 @@ text {
     <div class="header">
       <h1>WAR JS</h1>
     </div>
-  <div class="preloader" id="preloader">
+  <!-- <div class="preloader" id="preloader">
       <div class="loader"></div>
       <p>Carregando...</p>
-    </div>
+    </div> -->
     <div class="content";>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral esquerda -->
