--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -25,6 +25,7 @@
     position: absolute;
     transform-style: preserve-3d;
     transition: transform 2s;
+    transform: rotateX(15deg) rotateY(15deg);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
