--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -55,11 +55,17 @@
 }
 
 @keyframes roll {
-    0% { transform: translateY(0) rotateX(0) rotateY(0); }
-    25% { transform: translateY(200px) rotateX(0) rotateY(0); }
-    50% { transform: translateY(100px) rotateX(90deg) rotateY(90deg); }
-    75% { transform: translateY(150px) rotateX(0) rotateY(0); }
-    100% { transform: translateY(0) rotateX(180deg) rotateY(180deg); }
+    0% { transform: rotateX(0deg) rotateY(0deg); }
+    10% { transform: rotateX(0deg) rotateY(360deg); }
+    20% { transform: rotateX(0deg) rotateY(720deg); }
+    30% { transform: rotateX(90deg) rotateY(720deg); }
+    40% { transform: rotateX(180deg) rotateY(720deg); }
+    50% { transform: rotateX(270deg) rotateY(720deg); }
+    60% { transform: rotateX(360deg) rotateY(720deg); }
+    70% { transform: rotateX(360deg) rotateY(1080deg); }
+    80% { transform: rotateX(360deg) rotateY(1440deg); }
+    90% { transform: rotateX(360deg) rotateY(1800deg); }
+    100% { transform: rotateX(360deg) rotateY(2160deg); }
 }
 
 .preloader {
