--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -173,7 +173,7 @@ text {
         <!-- Conteúdo da barra lateral esquerda -->
         <p>Seu Objetivo :<span id="Objetivo"></span></p>
         <div class="input-container hidden" id="inputContainer">
-          <input type="number" id="numeroInput" placeholder="Digite um número">
+          <input type="number" id="numeroInput" placeholder="Mover Tropas">
           <button id="submitBtn">OK</button>
         </div>
         <p id="resultado"></p>
