--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -27,6 +27,8 @@
     transition: transform 2s;
     transform: rotateX(15deg) rotateY(15deg);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    border-radius: 10px; /* Arredonda as bordas do dado */
+
 }
 
 .face {
@@ -40,6 +42,7 @@
     justify-content: center;
     font-size: 2em;
     box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px; /* Arredonda as bordas do dado */
 
 }
 
