--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WAR JSS</title>
   <style>
+        .path { transition: opacity 0.3s, transform 0.3s; }
+        .highlighted { transform: scale(1.2); opacity: 1; }
+        .dimmed { opacity: 0.3; }
+
     body, html {
       height: 100%;
       margin: 0;
