--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -100,6 +100,12 @@ text {
   margin-bottom: 20px; /* Spacing between spinner and text */
 }
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
 .hidden {
   display: none;
 }
