--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -272,6 +272,9 @@ async function svgLoaded() {
 
   await turnofase1(lobbyId);
 
+  await AtualizaTurno[lobbyId,1];
+
+
   //await AtualizaTurno(lobbyId,1);
   //await VerificaTurno(lobbyId);
 }
