--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -270,9 +270,9 @@ async function svgLoaded() {
   
   await ExibirTropas(lobbyId);
  
- // await turnofase1(lobbyId); //Muda para fase 2
+  await turnofase1(lobbyId); //Muda para fase 2
 
-  //await turnofase2acima(lobbyId); // Demais fases...
+  await turnofase2acima(lobbyId); // Demais fases...
 
   //await AtualizaTurno(lobbyId,1);
   //await VerificaTurno(lobbyId);
