--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -220,6 +220,9 @@ text {
 
         <div id="coordinates">Mouse Coordinates: x: 0, y: 0</div>
 
+        <button id="AtaqueBTN">Ir Para Ataque</button>
+        <button id="FinalizarBTN">Finalizar Vez</button>
+
       </div>
     </div>
   </div>
