--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -220,7 +220,7 @@ text {
 
         <div id="coordinates">Mouse Coordinates: x: 0, y: 0</div>
 
-        <button id="AtaqueBTN">Ir Para Ataque</button>
+        <button id="FimAtaqueBTN">Finalizar Ataque</button>
         <button id="FinalizarBTN">Finalizar Vez</button>
 
       </div>
