--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -183,6 +183,15 @@ text {
         <div class="input-container hidden" id="inputContainer">
           <input type="number" id="numeroInput" placeholder="Mover Tropas">
           <button id="submitBtn">OK</button>
+          <div class="selector-container">
+            <button id="cancel-button">Cancelar</button>
+            <div class="scroll-container">
+                <ul id="number-list">
+                    <!-- Números serão gerados aqui -->
+                </ul>
+            </div>
+            <button id="confirm-button">Confirmar</button>
+        </div>
         </div>
         <p id="resultado"></p>
 
