--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -20,6 +20,66 @@
     height: 100px;
 }
 
+.selector-container {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 300px;
+}
+
+button {
+    margin: 0 5px;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: #f0f0f0;
+}
+
+#confirm-button {
+    background-color: #4CAF50;
+    color: white;
+}
+
+#cancel-button {
+    background-color: #f44336;
+    color: white;
+}
+
+.scroll-container {
+    flex-grow: 1;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+#number-list {
+    display: inline-flex;
+    padding: 10px;
+    margin: 0;
+    list-style-type: none;
+}
+
+#number-list li {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    margin: 0 5px;
+    text-align: center;
+    line-height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+    user-select: none;
+}
+
+#number-list li.selected {
+    background-color: #4CAF50;
+    color: white;
+}
+
+
 #dice {
     width: 100px;
     height: 100px;
