--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -27,6 +27,9 @@
     border-radius: 5px;
     overflow: hidden;
     width: 300px;
+    background-color: white; /* Adicione uma cor de fundo */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adicione uma sombra para flutuar */
+    position: relative; /* Use o position relative se desejar adicionar elementos flutuantes */
 }
 
 button {
@@ -78,7 +81,6 @@ button {
     background-color: #4CAF50;
     color: white;
 }
-
 
 #dice {
     width: 100px;
