--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -267,6 +267,7 @@ text {
         <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
         <div class="selector-container">
           <button id="cancel-button">Cancelar</button>
+          <div class="input-container hidden" id="inputContainer">
           <div class="scroll-container">
               <ul id="number-list">
                   <!-- Números serão gerados aqui -->
@@ -274,6 +275,7 @@ text {
           </div>
           <button id="confirm-button">Confirmar</button>
       </div>
+    </div>
       </div>
       <div class="sidebar">
         <!-- Conteúdo da barra lateral direita -->
