--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -265,8 +265,7 @@ text {
       </div>
       <div class="main">
         <object id="svgObject" type="image/svg+xml" data="/IMAGE/Mundi.svg"></object>
-        <div class="input-container hidden" id="inputContainer">
-
+        <div class="input-container hidden" id="inputContainer2">
         <div class="selector-container">         
           <button id="cancel-button">Cancelar</button>
           <div class="scroll-container">
