--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -331,7 +331,7 @@ async function svgLoaded() {
 
   await ObjetivoMain(lobbyId); // Muda para fase 1  
 
-  await DestribuirTerritorios(lobbyId) 
+  await DestribuirTerritorios(lobbyId) ;
 
   await ImprimirJogadores(lobbyId);
 
