--- a/Partida/Partida.html
+++ b/Partida/Partida.html
@@ -289,6 +289,8 @@ text {
         <p>Nome do Jogador: <span id="nomeJogador7"></span></p>
         
         <p>Turno atual: <span id="TurnoAtual"></span></p>
+        
+         <div id="consoleBox"></div>
 
         <div id="coordinates">Mouse Coordinates: x: 0, y: 0</div>
 
